added book chapters with a template

--- a/publications/book.bib
+++ b/publications/book.bib
@@ -1,6 +1,6 @@
 @incollection{baltruvsaitis2018challenges,
   title={Challenges and applications in multimodal machine learning},
-  author={Baltru{\v{s}}aitis, Tadas and Ahuja, Chaitanya and Morency, Louis-Philippe},
+  author={Baltrusaitis, Tadas and Ahuja, Chaitanya and Morency, Louis-Philippe},
   booktitle={The Handbook of Multimodal-Multisensor Interfaces: Signal Processing, Architectures, and Detection of Emotion and Cognition-Volume 2},
   pages={17--48},
   year={2018},
