--- a/publications/book.bib
+++ b/publications/book.bib
@@ -4,5 +4,6 @@
   booktitle={The Handbook of Multimodal-Multisensor Interfaces: Signal Processing, Architectures, and Detection of Emotion and Cognition-Volume 2},
   pages={17--48},
   year={2018},
-  _venue={The Handbook of Multimodal-Multisensor Interfaces}
+  _venue={The Handbook of Multimodal-Multisensor Interfaces},
+  url={https://dl.acm.org/doi/abs/10.1145/3107990.3107993}
 }
