--- a/publications/selected.bib
+++ b/publications/selected.bib
@@ -1,3 +1,26 @@
+@article{ahuja2022communication,
+  title={Communication Beyond Words: Grounding Visual Body Motion with Language},
+  author={Ahuja, Chaitanya},
+  journal={PhD dissertation, Carnegie Mellon University, 2022},
+  _venue={PhD dissertation, Carnegie Mellon University, 2022},
+  year={2022},
+  url={https://chahuja.com/files/chaitanya_ahuja_phd_thesis.pdf},
+  abstract={The central theme of this thesis is to understand the two-way relationship (a.k.a. grounding) between human body motions and its associated spoken language, which includes both verbal and vocal cues. Understanding this complex relationship will help us to both better understand the meaning intended by body gestures and provide us with the knowledge necessary to generate more realistic nonverbal body animations with interactive technologies. With these motivations in mind, we propose three key challenges: (1) Nonverbal Grounding as the core component of this thesis to study the close relationship between spoken language and motion, (2) Personalization to better understand idiosyncrasies and commonalities on how people gesture, and (3) Low Resource Learning when gestures occur infrequently or the amount of labeled data is limited and often unbalanced. These challenges investigate the commonalities, uniqueness and generalizability of visual body communication respectively in the presence of verbal and vocal information
+  }
+}
+
+@article{ahuja2021low,
+  title={Low-Resource Adaptation of Spatio-Temporal Crossmodal Generative Models},
+  author={Ahuja, Chaitanya and Lee, Dong Won and Morency, Louis-Philippe},
+  journal={CVPR 2022},
+  _venue={CVPR 2022},
+  year={2022},
+  url={https://openaccess.thecvf.com/content/CVPR2022/papers/Ahuja_Low-Resource_Adaptation_for_Personalized_Co-Speech_Gesture_Generation_CVPR_2022_paper.pdf},
+  codeurl={https://chahuja.com/diffgan},
+  abstract={Personalizing an avatar for co-speech gesture generation from spoken language requires learning the idiosyncrasies of a person’s gesture style from a small amount of data. Previous methods in gesture generation require large amounts of data for each speaker, which is often infeasible. We propose an approach, named DiffGAN, that efficiently personalizes co-speech gesture generation models of a high-resource source speaker to target speaker with just 2 minutes of target training data. A unique characteristic of DiffGAN is its ability to account for the crossmodal grounding shift, while also addressing the distribution shift in the output domain. We substantiate the effectiveness of our approach a large scale publicly available dataset through quantitative, qualitative and user studies, which show that our proposed methodology significantly outperforms prior approaches for low-resource adaptation of gesture generation. Code and videos can be found at https://chahuja.com/diffgan.
+  }
+}
+
 @article{ahuja2020no,
   title={No Gestures Left Behind: Learning Relationships between Spoken Language and Freeform Gestures},
   author={Ahuja, Chaitanya and Lee, Dong Won and Ishii, Ryo and Morency, Louis-Philippe},
