remove extra year in publications

--- a/publications/selected.bib
+++ b/publications/selected.bib
@@ -1,8 +1,8 @@
 @article{nyatsanga2023communication,
   title={Communication Beyond Words: Grounding Visual Body Motion with Language},
   author={Nyatsanga, Simbarashe and Kucherenko, Taras and Ahuja, Chaitanya and Henter, Gustav Eje and Neff, Michael},
-  journal={EUROGRAPHICS, 2023},
-  _venue={EUROGRAPHICS, 2023},
+  journal={EUROGRAPHICS},
+  _venue={EUROGRAPHICS},
   year={2023},
   url={https://arxiv.org/abs/2301.05339},
   abstract={Gestures that accompany speech are an essential part of natural and efficient embodied human communication. The automatic generation of such co-speech gestures is a long-standing problem in computer animation and is considered an enabling technology in film, games, virtual social spaces, and for interaction with social robots. The problem is made challenging by the idiosyncratic and non-periodic nature of human co-speech gesture motion, and by the great diversity of communicative functions that gestures encompass. Gesture generation has seen surging interest recently, owing to the emergence of more and larger datasets of human gesture motion, combined with strides in deep-learning-based generative models, that benefit from the growing availability of data. This review article summarizes co-speech gesture generation research, with a particular focus on deep generative models. First, we articulate the theory describing human gesticulation and how it complements speech. Next, we briefly discuss rule-based and classical statistical gesture synthesis, before delving into deep learning approaches. We employ the choice of input modalities as an organizing principle, examining systems that generate gestures from audio, text, and non-linguistic input. We also chronicle the evolution of the related training data sets in terms of size, diversity, motion quality, and collection method. Finally, we identify key research challenges in gesture generation, including data availability and quality; producing human-like motion; grounding the gesture in the co-occurring speech in interaction with other speakers, and in the environment; performing gesture evaluation; and integration of gesture synthesis into applications. We highlight recent approaches to tackling the various key challenges, as well as the limitations of these approaches, and point toward areas of future development.
@@ -12,8 +12,8 @@
 @article{ahuja2022communication,
   title={Communication Beyond Words: Grounding Visual Body Motion with Language},
   author={Ahuja, Chaitanya},
-  journal={PhD dissertation, Carnegie Mellon University, 2022},
-  _venue={PhD dissertation, Carnegie Mellon University, 2022},
+  journal={PhD dissertation, Carnegie Mellon University},
+  _venue={PhD dissertation, Carnegie Mellon University},
   year={2022},
   url={https://chahuja.com/files/chaitanya_ahuja_phd_thesis.pdf},
   abstract={The central theme of this thesis is to understand the two-way relationship (a.k.a. grounding) between human body motions and its associated spoken language, which includes both verbal and vocal cues. Understanding this complex relationship will help us to both better understand the meaning intended by body gestures and provide us with the knowledge necessary to generate more realistic nonverbal body animations with interactive technologies. With these motivations in mind, we propose three key challenges: (1) Nonverbal Grounding as the core component of this thesis to study the close relationship between spoken language and motion, (2) Personalization to better understand idiosyncrasies and commonalities on how people gesture, and (3) Low Resource Learning when gestures occur infrequently or the amount of labeled data is limited and often unbalanced. These challenges investigate the commonalities, uniqueness and generalizability of visual body communication respectively in the presence of verbal and vocal information
@@ -23,8 +23,8 @@
 @article{ahuja2021low,
   title={Low-Resource Adaptation of Spatio-Temporal Crossmodal Generative Models},
   author={Ahuja, Chaitanya and Lee, Dong Won and Morency, Louis-Philippe},
-  journal={CVPR 2022},
-  _venue={CVPR 2022},
+  journal={CVPR},
+  _venue={CVPR},
   year={2022},
   url={https://openaccess.thecvf.com/content/CVPR2022/papers/Ahuja_Low-Resource_Adaptation_for_Personalized_Co-Speech_Gesture_Generation_CVPR_2022_paper.pdf},
   codeurl={https://chahuja.com/diffgan},
