--- a/publications/selected.bib
+++ b/publications/selected.bib
@@ -1,5 +1,5 @@
 @article{nyatsanga2023communication,
-  title={Communication Beyond Words: Grounding Visual Body Motion with Language},
+  title={A Comprehensive Review of Data-Driven Co-Speech Gesture Generation},
   author={Nyatsanga, Simbarashe and Kucherenko, Taras and Ahuja, Chaitanya and Henter, Gustav Eje and Neff, Michael},
   journal={EUROGRAPHICS},
   _venue={EUROGRAPHICS},
