--- a/publications/selected.bib
+++ b/publications/selected.bib
@@ -1,3 +1,14 @@
+@article{sun2025multi,
+  title={Multi-Modal Large Language Models are Effective Vision Learners},
+  author={Sun, Li and Ahuja, Chaitanya and Chen, Peng and D\’Zmura, Matt and Batmanghelich, Kayhan and Bontrager, Philip},
+  journal={WACV},
+  _venue={WACV},
+  year={2025},
+  url={https://openaccess.thecvf.com/content/WACV2025/papers/Sun_Multi-Modal_Large_Language_Models_are_Effective_Vision_Learners_WACV_2025_paper.pdf},
+  abstract={Large language models (LLMs), pre-trained on vast amounts of text, have shown remarkable abilities in understanding general knowledge and commonsense. Therefore, it’s desirable to leverage pre-trained LLM to help solve computer vision tasks. Previous works on multi-modal LLM mainly focus on the generation capability. In this work, we propose LLM-augmented visual representation learning (LMVR). Our approach involves initially using a vision encoder to extract features, which are then projected into the word embedding space of the LLM. The LLM then generates responses based on the visual representation and a text prompt. Finally, we aggregate sequence-level features from the hidden layers of the LLM to obtain image-level representations. We conduct extensive experiments on multiple datasets, and have the following findings: (a) LMVR outperforms traditional vision encoder on various downstream tasks, and effectively learns the correspondence between words and image regions; (b) LMVR improves the generalizability compared to using a vision encoder alone, as evidenced by its superior resistance to domain shift; (c) LMVR improves the robustness of models to corrupted and perturbed visual data. Our findings demonstrate LLM-augmented visual representation learning is effective as it learns object-level concepts and commonsense knowledge. 
+  }
+}
+
 @article{ahuja2023continual,
   title={Continual Learning for Personalized Co-speech Gesture Generation},
   author={Ahuja, Chaitanya and Joshi, Pratik and Ishii, Ryo and Morency, Louis-Philippe},
